Refactor Hashicorp client (#186)
* Refactor Hashicorp client from VertX HttpClient to standard Java HttpClient. Use same HttpClient for same host/port.
* Changing vertex to 4.4.1