@@ -229,7 +229,9 @@ allprojects {
       '--add-opens',
       'java.base/java.util=ALL-UNNAMED',
       '--add-opens',
-      'java.base/java.util.concurrent=ALL-UNNAMED'
+      'java.base/java.util.concurrent=ALL-UNNAMED',
+      '--add-exports',
+      "java.base/sun.security.x509=ALL-UNNAMED"
     ]
     Set toImport = [
       'root.log.level',
@@ -371,7 +373,12 @@ subprojects {
     classpath = sourceSets.integrationTest.runtimeClasspath
     outputs.upToDateWhen { false }
 
-    jvmArgs = ['-Xms512m', '-Xmx1g']
+    jvmArgs = [
+      '-Xms512m',
+      '-Xmx1g',
+      '--add-exports',
+      'java.base/sun.security.x509=ALL-UNNAMED'
+    ]
 
     useJUnitPlatform()
   }
